objects/PayloadSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>MDM- Kevin Huang- Map integration payload json to the object fields for MDM-SMS webservice</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>this field is used for what action</description>
        <label>Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>The application this payload setting is used</description>
        <label>Application</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>this is SFDC object field name</description>
        <label>Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Name__c</fullName>
        <description>Json property name</description>
        <label>JSON Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <label>sObject Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MDM Payload Settings</label>
</CustomObject>